--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "subtree-sync": "subtree-sync.sh.bat"
+    "subtree-sync": "subtree-sync"
   },
   "devDependencies": {
     "dotenv": "^14.2.0",
