--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,12 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "independent"
+  "useWorkspaces": true,
+  "version": "independent",
+  "packages": ["packages/*"],
+  "ignoreChanges": ["**/__fixtures__/**", "**/__tests__/**", "**/*.md"],
+  "command": {
+    "version": {
+      "allowBranch": "main",
+      "conventionalCommits": true
+    }
+  }
 }
