feat: import schcal and calendar and datas

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
+    "dev": "cd packages/calendar && npm run dev",
+    "serve": "npx serve data -l tcp://0.0.0.0:50302",
     "subtree-sync": "subtree-sync"
   },
   "devDependencies": {
